<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/backbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
         android:layout_weight="1"
            app:icon="@drawable/back"
            android:text="@string/back"
            app:iconTint="@color/black"
            app:iconGravity="top"
            android:textColor="@color/black"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/forwardbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/baseline_arrow_forward_24"
            android:text="@string/forward"
            app:iconTint="@color/black"
            app:iconGravity="top"
            android:textColor="@color/black"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/savebtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/save"
            android:text="@string/save"
            app:iconTint="@color/black"
            app:iconGravity="top"
            android:textColor="@color/black"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bookmarkbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/bookmark"
            android:text="@string/bookmark"
            app:iconTint="@color/black"
            app:iconGravity="top"
            android:textColor="@color/black"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/desktopbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/laptop"
            android:text="@string/desktop"
            app:iconTint="@color/black"
            app:iconGravity="top"
            android:textColor="@color/black"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/full_scn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/fullscreen"
            android:text="@string/fullscreen"
            app:iconTint="@color/black"
            app:iconGravity="top"
            android:textColor="@color/black"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            />
    </LinearLayout>
        

</LinearLayout>