<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".acttivity.MainActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/search_icon"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_search_24" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/c_design"
                android:hint="@string/enter_url"
                android:paddingHorizontal="5dp"
                android:singleLine="true" />
          <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tabsbtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
              android:text="@string/one"
              android:gravity="center"
              android:layout_marginVertical="4dp"
              android:layout_marginHorizontal="4dp"
              android:textColor="@color/black"
                android:background="@drawable/costum_text_textview"
                />

            <ImageButton
                android:id="@+id/refressbtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/refresh"
                android:src="@drawable/refresh_icon" />

            <ImageButton
                android:id="@+id/bottom"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/go_button"
                android:src="@drawable/baseline_arrow_forward_24" />

        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.5" />


    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/setbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="596dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/setting_btn"
        android:src="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506" />


</androidx.constraintlayout.motion.widget.MotionLayout>